--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "shield-embedded-web-extension",
+  "name": "template-shield-study",
   "version": "1.0.0",
-  "description": "An embedded web extension shield study",
+  "description": "Template Shield Study",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,7 +11,7 @@
     "eslint": "eslint addon --ext jsm --ext js --ext json --",
     "watch": "onchange 'addon/**' 'package.json' 'template/**' -e addon/install.rdf -e addon/chrome.manifest -e addon/StudyUtils.jsm -- npm run build -- '{{event}} {{changed}} $(date)'"
   },
-  "keywords": [],
+  "keywordds": [],
   "author": "Gregg Lind <glind@mozilla.com>",
   "license": "ISC",
   "devDependencies": {
@@ -25,15 +25,15 @@
   },
   "addon": {
     "version": "1.0.0",
-    "id": "shield-example-addon@mozilla.com",
+    "id": "template-shield-study@mozilla.com",
     "name": "Shield Bootstrap Example",
     "minVersion": "53.0",
     "maxVersion": "*",
     "multiprocessCompatible": true,
     "hasEmbeddedWebExtension": true,
     "creator": "Gregg Lind <glind@mozilla.com>",
-    "description": "Shield Intrumented Example As Embedded WebExtension",
-    "chrome": "shield-example-addon"
+    "description": "template shield study to serve a as base",
+    "chrome": "template-shield-study"
   },
   "dependencies": {}
 }
