--- a/package.json
+++ b/package.json
@@ -3,25 +3,38 @@
   "version": "1.0.0",
   "description": "Template Shield Study",
   "main": "index.js",
+  "repository": "https://github.com/mozilla/template-shield-study.git",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "ln -s ../../.. node_modules/shield-studies-addon-utils",
-    "prebuild": "cp node_modules/shield-studies-addon-utils/dist/StudyUtils.jsm addon/",
+    "postinstall": "./bin/patch_webdriver.sh",
+    "lint": "eslint .",
     "build": "XPI=shield-embedded-web-extension.xpi bash ./bin/xpi.sh",
+    "test": "export XPI_NAME=extension/share-button-study.xpi && npm run build && mocha test/functional_tests.js --retry 2",
+    "harness_test": "export XPI_NAME=extension/share-button-study.xpi && mocha test/functional_tests.js --retry 2 --reporter json",
+    "run": "export XPI_NAME=extension/share-button-study.xpi && npm run build && node manual_test.js",
+    "prebuild": "cp node_modules/shield-studies-addon-utils/dist/StudyUtils.jsm addon/",
     "eslint": "eslint addon --ext jsm --ext js --ext json --",
     "watch": "onchange 'addon/**' 'package.json' 'template/**' -e addon/install.rdf -e addon/chrome.manifest -e addon/StudyUtils.jsm -- npm run build -- '{{event}} {{changed}} $(date)'"
   },
-  "keywordds": [],
+  "keywords": [],
   "author": "Gregg Lind <glind@mozilla.com>",
   "license": "ISC",
   "devDependencies": {
     "ajv": "^5.1.1",
-    "datauri": "^1.0.5",
-    "eslint": "^3.19.0",
+    "clipboardy": "^1.1.4",
+    "eslint": "^4.4.1",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.5.0",
     "eslint-plugin-mozilla": "^0.3.2",
+    "fs-extra": "^3.0.1",
+    "fx-runner": "^1.0.6",
+    "geckodriver": "^1.7.1",
     "jshint": "^2.9.5",
+    "mocha": "^3.4.2",
     "moustache": "0.0.2",
-    "onchange": "^3.2.1"
+    "onchange": "^3.2.1",
+    "path": "^0.12.7",
+    "selenium-webdriver": "^3.4.0",
+    "shield-studies-addon-utils": "^4.0.0"
   },
   "addon": {
     "version": "1.0.0",
