--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "postinstall": "./bin/patch_webdriver.sh",
     "lint": "eslint .",
+    "eslint": "eslint addon --ext jsm --ext js --ext json --",
+    "prebuild": "cp node_modules/shield-studies-addon-utils/dist/StudyUtils.jsm addon/",
     "build": "XPI=shield-embedded-web-extension.xpi bash ./bin/xpi.sh",
     "test": "export XPI_NAME=extension/share-button-study.xpi && npm run build && mocha test/functional_tests.js --retry 2",
     "harness_test": "export XPI_NAME=extension/share-button-study.xpi && mocha test/functional_tests.js --retry 2 --reporter json",
-    "run": "export XPI_NAME=extension/share-button-study.xpi && npm run build && node manual_test.js",
-    "prebuild": "cp node_modules/shield-studies-addon-utils/dist/StudyUtils.jsm addon/",
-    "eslint": "eslint addon --ext jsm --ext js --ext json --",
+    "firefox": "export XPI_NAME=extension/share-button-study.xpi && npm run build && node manual_test.js",
     "watch": "onchange 'addon/**' 'package.json' 'template/**' -e addon/install.rdf -e addon/chrome.manifest -e addon/StudyUtils.jsm -- npm run build -- '{{event}} {{changed}} $(date)'"
   },
   "keywords": [],
