--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "main": "index.js",
   "repository": "https://github.com/mozilla/template-shield-study.git",
   "scripts": {
-    "postinstall": "./bin/patch_webdriver.sh",
     "lint": "eslint .",
     "eslint": "eslint addon --ext jsm --ext js --ext json --",
     "prebuild": "cp node_modules/shield-studies-addon-utils/dist/StudyUtils.jsm addon/",
     "build": "XPI=shield-embedded-web-extension.xpi bash ./bin/xpi.sh",
-    "test": "export XPI_NAME=extension/share-button-study.xpi && npm run build && mocha test/functional_tests.js --retry 2",
-    "harness_test": "export XPI_NAME=extension/share-button-study.xpi && mocha test/functional_tests.js --retry 2 --reporter json",
-    "firefox": "export XPI_NAME=extension/share-button-study.xpi && npm run build && node manual_test.js",
+    "test": "export XPI_NAME=dist/addon.xpi && npm run build && mocha test/functional_tests.js --retry 2",
+    "harness_test": "export XPI_NAME=dist/addon.xpi && mocha test/functional_tests.js --retry 2 --reporter json",
+    "firefox": "export XPI_NAME=dist/addon.xpi && npm run build && node manual_test.js",
     "watch": "onchange 'addon/**' 'package.json' 'template/**' -e addon/install.rdf -e addon/chrome.manifest -e addon/StudyUtils.jsm -- npm run build -- '{{event}} {{changed}} $(date)'"
   },
   "keywords": [],
@@ -33,7 +32,7 @@
     "moustache": "0.0.2",
     "onchange": "^3.2.1",
     "path": "^0.12.7",
-    "selenium-webdriver": "^3.4.0",
+    "selenium-webdriver": "^3.5.0",
     "shield-studies-addon-utils": "^4.0.0"
   },
   "addon": {
