--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "eslint": "eslint addon --ext jsm --ext js --ext json --",
     "prebuild": "cp node_modules/shield-studies-addon-utils/dist/StudyUtils.jsm addon/",
     "build": "XPI=shield-embedded-web-extension.xpi bash ./bin/xpi.sh",
-    "test": "export XPI_NAME=dist/addon.xpi && npm run build && mocha test/functional_tests.js --retry 2",
-    "harness_test": "export XPI_NAME=dist/addon.xpi && mocha test/functional_tests.js --retry 2 --reporter json",
-    "firefox": "export XPI_NAME=dist/addon.xpi && npm run build && node manual_test.js",
+    "test": "export XPI_NAME=dist/linked-addon.xpi && npm run build && mocha test/functional_tests.js --retry 2",
+    "harness_test": "export XPI_NAME=dist/linked-addon.xpi && mocha test/functional_tests.js --retry 2 --reporter json",
+    "firefox": "export XPI_NAME=dist/linked-addon.xpi && npm run build && node manual_test.js",
     "watch": "onchange 'addon/**' 'package.json' 'template/**' -e addon/install.rdf -e addon/chrome.manifest -e addon/StudyUtils.jsm -- npm run build -- '{{event}} {{changed}} $(date)'"
   },
   "keywords": [],
@@ -23,6 +23,7 @@
     "eslint": "^4.4.1",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.5.0",
+    "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-mozilla": "^0.3.2",
     "fs-extra": "^3.0.1",
     "fx-runner": "^1.0.6",
@@ -38,14 +39,14 @@
   "addon": {
     "version": "1.0.0",
     "id": "template-shield-study@mozilla.com",
+    "xpi_name": "template-shield-study.xpi",
     "name": "Shield Bootstrap Example",
     "minVersion": "53.0",
     "maxVersion": "*",
     "multiprocessCompatible": true,
     "hasEmbeddedWebExtension": true,
     "creator": "Gregg Lind <glind@mozilla.com>",
-    "description": "template shield study to serve a as base",
-    "chrome": "template-shield-study"
+    "description": "template shield study to serve a as base"
   },
   "dependencies": {}
 }
