--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/mozilla/template-shield-study.git",
   "scripts": {
     "eslint": "eslint addon --ext jsm --ext js --ext json --",
-    "prebuild": "cp node_modules/shield-studies-addon-utils/dist/StudyUtils.jsm addon/",
+    "prebuild": "#cp node_modules/shield-studies-addon-utils/dist/StudyUtils.jsm addon/",
     "build": "XPI=shield-embedded-web-extension.xpi bash ./bin/xpi.sh",
     "test": "export XPI_NAME=dist/linked-addon.xpi && npm run build && mocha test/functional_tests.js --retry 2",
     "harness_test": "export XPI_NAME=dist/linked-addon.xpi && mocha test/functional_tests.js --retry 2 --reporter json",
