--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "template-shield-study",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Template Shield Study",
   "main": "index.js",
   "repository": "https://github.com/mozilla/template-shield-study.git",
   "scripts": {
-    "eslint": "eslint addon --ext jsm --ext js --ext json --",
+    "eslint": "eslint addon --ext jsm --ext js --ext json",
     "prebuild": "#cp node_modules/shield-studies-addon-utils/dist/StudyUtils.jsm addon/",
     "build": "XPI=shield-embedded-web-extension.xpi bash ./bin/xpi.sh",
     "test": "export XPI_NAME=dist/linked-addon.xpi && npm run build && mocha test/functional_tests.js --retry 2",
@@ -19,11 +19,11 @@
   "devDependencies": {
     "ajv": "^5.1.1",
     "clipboardy": "^1.1.4",
-    "eslint": "^4.4.1",
+    "eslint": "^4.7.2",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.5.0",
     "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-mozilla": "^0.4.3",
+    "eslint-plugin-mozilla": "^0.4.4",
     "eslint-plugin-no-unsanitized": "^2.0.1",
     "fs-extra": "^3.0.1",
     "fx-runner": "^1.0.6",
