--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "repository": "https://github.com/mozilla/template-shield-study.git",
   "scripts": {
     "eslint": "eslint addon --ext jsm --ext js --ext json",
-    "prebuild": "#cp node_modules/shield-studies-addon-utils/dist/StudyUtils.jsm addon/",
-    "build": "XPI=shield-embedded-web-extension.xpi bash ./bin/xpi.sh",
-    "test": "export XPI_NAME=dist/linked-addon.xpi && npm run build && mocha test/functional_tests.js --retry 2",
-    "harness_test": "export XPI_NAME=dist/linked-addon.xpi && mocha test/functional_tests.js --retry 2 --reporter json",
-    "firefox": "export XPI_NAME=dist/linked-addon.xpi && npm run build && node manual_test.js",
-    "watch": "onchange 'addon/**' 'package.json' 'template/**' -e addon/install.rdf -e addon/chrome.manifest -e addon/StudyUtils.jsm -- npm run build -- '{{event}} {{changed}} $(date)'"
+    "prebuild": "cp node_modules/shield-studies-addon-utils/dist/StudyUtils.jsm addon/",
+    "build": "bash ./bin/xpi.sh",
+    "test": "export XPI=dist/linked-addon.xpi && npm run build && mocha test/functional_tests.js --retry 2",
+    "harness_test": "export XPI=dist/linked-addon.xpi && mocha test/functional_tests.js --retry 2 --reporter json",
+    "firefox": "export XPI=dist/linked-addon.xpi && npm run build && node run-firefox.js",
+    "watch": "onchange 'addon/**' 'package.json' 'template/**' -e addon/install.rdf -e addon/chrome.manifest -e addon/StudyUtils.jsm -- npm run build -- '{{event}} {{changed}} $(date)'",
+    "sign": "echo 'TBD, see: https://bugzilla.mozilla.org/show_bug.cgi?id=1407757'"
   },
   "keywords": [],
   "author": "Gregg Lind <glind@mozilla.com>",
@@ -29,6 +30,7 @@
     "fx-runner": "^1.0.6",
     "geckodriver": "^1.7.1",
     "jshint": "^2.9.5",
+    "minimist": "^1.2.0",
     "mocha": "^3.4.2",
     "moustache": "0.0.2",
     "onchange": "^3.2.1",
@@ -37,16 +39,17 @@
     "shield-studies-addon-utils": "^4.0.0"
   },
   "addon": {
-    "version": "1.0.0",
-    "id": "template-shield-study@mozilla.com",
-    "xpi_name": "template-shield-study.xpi",
+    "__DOC__": "the variables fill the moustache templates",
+    "id": "@template-shield-study.mozilla.com",
     "name": "Shield Bootstrap Example",
-    "minVersion": "53.0",
+    "minVersion": "57.0",
     "maxVersion": "*",
     "multiprocessCompatible": true,
     "hasEmbeddedWebExtension": true,
+    "chromeResource": "template-shield-study",
     "creator": "Gregg Lind <glind@mozilla.com>",
-    "description": "template shield study to serve a as base"
+    "description": "template shield study to serve a as base",
+    "bugzilla": "<tbd: bug to attach for signing>"
   },
   "dependencies": {}
 }
