--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "onchange": "^3.2.1",
     "path": "^0.12.7",
     "selenium-webdriver": "^3.6.0",
-    "pioneer-utils": "^1.0.9",
-    "shield-studies-addon-utils": "^4.1.0"
+    "pioneer-utils": "^1.0.9"
   },
   "homepage": "https://github.com/motin/esper-pioneer-shield-study",
   "keywords": [
@@ -61,7 +60,7 @@
   "scripts": {
     "build": "bash ./bin/xpi.sh",
     "eslint": "eslint addon --ext jsm --ext js --ext json",
-    "prebuild": "cp node_modules/pioneer-utils/dist/PioneerUtils.jsm addon/ && cp node_modules/shield-studies-addon-utils/dist/StudyUtils.jsm addon/",
+    "prebuild": "cp node_modules/pioneer-utils/dist/PioneerUtils.jsm addon/",
     "firefox": "export XPI=dist/linked-addon.xpi && npm run build && node run-firefox.js",
     "harness_test": "export XPI=dist/linked-addon.xpi && mocha test/functional_tests.js --retry 2 --reporter json",
     "sign": "echo 'TBD, see: https://bugzilla.mozilla.org/show_bug.cgi?id=1407757'",
