--- a/package.json
+++ b/package.json
@@ -20,18 +20,21 @@
     "url": "https://github.com/motin/esper-pioneer-shield-study/issues"
   },
   "devDependencies": {
-    "addons-linter": "^0.28.0",
+    "addons-linter": "^0.28.2",
     "ajv": "^5.3.0",
     "clipboardy": "^1.1.4",
+    "doctoc": "^1.3.0",
     "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-mozilla": "^0.4.5",
     "eslint-plugin-no-unsanitized": "^2.0.1",
+    "fixpack": "^2.3.1",
     "fs-extra": "^3.0.1",
     "fx-runner": "^1.0.8",
     "geckodriver": "^1.9.0",
+    "get-firefox": "^2.0.0",
     "jshint": "^2.9.5",
     "minimist": "^1.2.0",
     "mocha": "^3.4.2",
@@ -39,8 +42,8 @@
     "npm-run-all": "^4.1.1",
     "nsp": "^2.8.1",
     "onchange": "^3.2.1",
-    "path": "^0.12.7",
-    "selenium-webdriver": "^3.6.0",
+    "prettier": "^1.10.2",
+    "selenium-webdriver": "^3.5.0",
     "pioneer-utils": "^1.0.9"
   },
   "homepage": "https://github.com/motin/esper-pioneer-shield-study",
@@ -59,10 +62,18 @@
   },
   "scripts": {
     "build": "bash ./bin/xpi.sh",
-    "eslint": "eslint addon --ext jsm --ext js --ext json",
-    "prebuild": "cp node_modules/pioneer-utils/dist/PioneerUtils.jsm addon/",
+    "eslint": "eslint . --ext jsm --ext js --ext json",
+    "eslint-fix": "eslint . --ext jsm --ext js --ext json --fix",
     "firefox": "export XPI=dist/linked-addon.xpi && npm run build && node run-firefox.js",
+    "format": "prettier '**/*.{css,js,json}' --trailing-comma=all --ignore-path=.eslintignore --write && npm run eslint-fix",
     "harness_test": "export XPI=dist/linked-addon.xpi && mocha test/functional_tests.js --retry 2 --reporter json",
+    "lint": "npm-run-all lint:*",
+    "lint-build:addons-linter": "# actually a post build test:  bin/addonLintTest ' + require('./package.json').name",
+    "lint:addons-linter": "addons-linter addon/webextension/",
+    "lint:eslint": "npm run eslint",
+    "lint:fixpack": "fixpack",
+    "lint:nsp": "nsp check",
+    "prebuild": "cp node_modules/pioneer-utils/dist/PioneerUtils.jsm addon/",
     "sign": "echo 'TBD, see: https://bugzilla.mozilla.org/show_bug.cgi?id=1407757'",
     "test": "export XPI=dist/linked-addon.xpi && npm run build && mocha test/functional_tests.js --retry 2",
     "watch": "onchange 'addon/**' 'package.json' 'template/**' -e addon/install.rdf -e addon/chrome.manifest -e addon/StudyUtils.jsm -- npm run build -- '{{event}} {{changed}} $(date)'"
