--- a/package.json
+++ b/package.json
@@ -47,13 +47,7 @@
     "pioneer-utils": "^1.0.9"
   },
   "homepage": "https://github.com/motin/esper-pioneer-shield-study",
-  "keywords": [
-    "mozilla",
-    "legacy-addon",
-    "firefox",
-    "shield-study",
-    "pioneer"
-  ],
+  "keywords": ["mozilla", "legacy-addon", "firefox", "shield-study", "pioneer"],
   "license": "ISC",
   "main": "index.js",
   "repository": {
@@ -64,18 +58,25 @@
     "build": "bash ./bin/xpi.sh",
     "eslint": "eslint . --ext jsm --ext js --ext json",
     "eslint-fix": "eslint . --ext jsm --ext js --ext json --fix",
-    "firefox": "export XPI=dist/linked-addon.xpi && npm run build && node run-firefox.js",
-    "format": "prettier '**/*.{css,js,json,jsm,md}' --trailing-comma=all --ignore-path=.eslintignore --write && npm run eslint-fix",
-    "harness_test": "export XPI=dist/linked-addon.xpi && mocha test/functional_tests.js --retry 2 --reporter json",
+    "firefox":
+      "export XPI=dist/linked-addon.xpi && npm run build && node run-firefox.js",
+    "format":
+      "prettier '**/*.{css,js,json,jsm,md}' --trailing-comma=all --ignore-path=.eslintignore --write && npm run eslint-fix",
+    "harness_test":
+      "export XPI=dist/linked-addon.xpi && mocha test/functional_tests.js --retry 2 --reporter json",
     "lint": "npm-run-all lint:*",
-    "lint-build:addons-linter": "# actually a post build test:  bin/addonLintTest ' + require('./package.json').name",
+    "lint-build:addons-linter":
+      "# actually a post build test:  bin/addonLintTest ' + require('./package.json').name",
     "lint:addons-linter": "addons-linter addon/webextension/",
     "lint:eslint": "npm run eslint",
     "lint:fixpack": "fixpack",
     "lint:nsp": "nsp check",
     "prebuild": "cp node_modules/pioneer-utils/dist/PioneerUtils.jsm addon/",
-    "sign": "echo 'TBD, see: https://bugzilla.mozilla.org/show_bug.cgi?id=1407757'",
-    "test": "export XPI=dist/linked-addon.xpi && npm run build && mocha test/functional_tests.js --retry 2",
-    "watch": "onchange 'addon/**' 'package.json' 'template/**' -e addon/install.rdf -e addon/chrome.manifest -e addon/StudyUtils.jsm -- npm run build -- '{{event}} {{changed}} $(date)'"
+    "sign":
+      "echo 'TBD, see: https://bugzilla.mozilla.org/show_bug.cgi?id=1407757'",
+    "test":
+      "export XPI=dist/linked-addon.xpi && npm run build && mocha test/functional_tests.js --retry 2",
+    "watch":
+      "onchange 'addon/**' 'package.json' 'template/**' -e addon/install.rdf -e addon/chrome.manifest -e addon/StudyUtils.jsm -- npm run build -- '{{event}} {{changed}} $(date)'"
   }
 }
