--- a/.eslintignore
+++ b/.eslintignore
@@ -10,3 +10,4 @@ addon/PioneerUtils.jsm
 firefox
 # don't lint/format package.json since npm install formats it differently by default
 package.json
+pioneer-opt-in
