Fixes #14: Update package.json license

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "pioneer",
     "shield-study"
   ],
-  "license": "ISC",
+  "license": "MPL-2.0",
   "main": "index.js",
   "repository": {
     "type": "git",
