--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "harness_test": "export XPI=dist/linked-addon.xpi && mocha test/functional_tests.js --retry 2 --reporter json",
     "lint": "npm-run-all lint:*",
     "lint-build:addons-linter": "# actually a post build test:  bin/addonLintTest ' + require('./package.json').name",
-    "lint:addons-linter": "addons-linter addon/webextension/",
+    "lint:addons-linter": "addons-linter addon",
     "lint:eslint": "npm run eslint",
     "lint:fixpack": "fixpack",
     "lint:nsp": "nsp check",
